Specify G_PRIORITY_DEFAULT for signal emission idle sources

This avoids the situation where the async ready callback is called first
because it has higher priority.

https://bugzilla.gnome.org/show_bug.cgi?id=631727